--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -8,11 +8,11 @@ This document will show how to import data
 
 ```{r setup,echo=FALSE, message = FALSE }
 library(tidyverse)
-
-
+library(readxl)
+library(haven)
 ```
 
-##Import the FAS Litters CSV 
+# Import the FAS Litters CSV 
 
 Import the dataset and clean the names
 ```{r}
@@ -25,9 +25,11 @@ litters_df = janitor::clean_names(litters_df)
 names(litters_df)
 ```
 
-##Import the FAS Pups CSV 
+## Import the FAS Pups CSV 
 
 Import the dataset and clean the names
+
+Use relative paths for collaborations
 
 ```{r}
 pups_df= read_csv("data_import_examples/FAS_pups.csv")
@@ -40,7 +42,62 @@ names(pups_df)
 ```
 
 
+# Look at read_csv options 
 
-##Look at the dataset
+col_names and Skip very first rows 
+
+```{r}
+litters_df= 
+  read_csv(
+    file= "data_import_examples/FAS_litters.csv",
+      col_names= FALSE, 
+      skip= 2
+  )
+```
+
+Handling Missing Data. Helps R understand missing columns with missing values are not character values if there are numbers in it. Helps distinguish between character and numbers variables. 
+
+```{r}
+litters_df= 
+  read_csv("data_import_examples/FAS_litters.csv",
+  na= c("NA","",".")
+  )
+litters_df= janitor::clean_names(litters_df)
+
+pull(litters_df, gd0_weight)
+```
+
+What if we code 'group' as a factor variable?
+
+```{r}
+litters_df= 
+  read_csv("data_import_examples/FAS_litters.csv",
+  na= c("NA","","."),
+  col_types = cols(
+    Group = col_factor()
+    )
+  )
+litters_df
+```
+
+# Import an excel file 
+
+Import MLB 2011 summary data 
+```{r}
+
+mlb_df= read_excel("data_import_examples/mlb11.xlsx", sheet ="mlb11")
+mlb_df
+  
+```
+
+## Import SAS data
+
+```{r}
+pulse_df= read_sas("data_import_examples/public_pulse_data.sas7bdat")
+pulse_df
+```
+
+
+# Look at the dataset
 
 # Section 1
